# Brainiac-2

./: .gitignore  README.md  pyproject.toml
brainiac/: __main__.py  ai.py  main.py  model.py  utils.py
